Closed
Bug 1609598
Opened 6 years ago
Closed 6 years ago
Composition recording on WebRender could have a skew on Windows
Categories
(Core :: Graphics: WebRender, defect, P3)
Tracking
()
VERIFIED
FIXED
mozilla74
| Tracking | Status | |
|---|---|---|
| firefox74 | --- | verified |
People
(Reporter: sotaro, Assigned: sotaro)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(2 files)
When I tested composition recording on WebRender on Windows, recorded image had a skew with some browser window sizes.
STR was from Bug 1592031 Comment 3.
STR
- [1] Set 2 prefs
- layers.windowrecording.path
- devtools.chrome.enabled = true
- [2] open the Browser Console, and execute the following
- window.windowUtils.startCompositionRecording()
- window.windowUtils.stopCompositionRecording(true)
recorded image had a skew with some browser window sizes.
It might be a problem of WebRenderCompositionRecorder.
| Assignee | ||
Comment 1•6 years ago
|
||
Updated•6 years ago
|
Has Regression Range: --- → yes
Keywords: regression
| Assignee | ||
Updated•6 years ago
|
Attachment #9121219 -
Attachment description: frame with skew → recorded frame image with skew
Updated•6 years ago
|
| Assignee | ||
Updated•6 years ago
|
Assignee: nobody → sotaro.ikeda.g
| Assignee | ||
Comment 2•6 years ago
|
||
Pushed by sikeda.birchill@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/d34d0bb12c81
Fix stride in RendererRecordedFrame::GetSourceSurface() r=nical
Comment 4•6 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox74:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla74
Comment 5•6 years ago
|
||
This issue is Verified as fixed in our latest Beta 74.0b5 on Windows 10.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•