Bug 1609598 - Fix stride in RendererRecordedFrame::GetSourceSurface() r=nical

Differential Revision: https://phabricator.services.mozilla.com/D60225